# flowforge-ai

./: .gitignore  README.md
agentforge/: docker-compose.yml
agentforge/backend/: pyproject.toml  requirements.txt
agentforge/backend/app/: config.py  main.py
agentforge/backend/app/api/v1/: copilot.py  execution.py  generation.py  ir.py  projects.py
agentforge/backend/app/core/copilot/: prompts.py  service.py  tools.py
agentforge/backend/app/core/execution/: runner.py
agentforge/backend/app/core/generators/: base.py  registry.py
agentforge/backend/app/core/generators/claude_agent_sdk/: generator.py
agentforge/backend/app/core/generators/google_adk/: generator.py
agentforge/backend/app/core/generators/langgraph/: generator.py
agentforge/backend/app/core/ir/: schema.py  validation.py
agentforge/frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
agentforge/frontend/src/app/: globals.css  layout.tsx  page.tsx
agentforge/frontend/src/app/about/: page.tsx
agentforge/frontend/src/components/canvas/: Canvas.tsx  ContextMenu.tsx  EmptyState.tsx  Toolbar.tsx  WorkflowActionBar.tsx
agentforge/frontend/src/components/common/: CommandPalette.tsx  HeaderActions.tsx
agentforge/frontend/src/components/copilot/: CopilotChat.tsx
agentforge/frontend/src/components/editors/: AgentEditor.tsx  ConditionEditor.tsx  EdgePropertiesEditor.tsx  HumanInputEditor.tsx  LoopEditor.tsx  NodeEditorModal.tsx  ParallelEditor.tsx  ToolEditor.tsx
agentforge/infra/docker/: backend.Dockerfile  frontend.Dockerfile
(+26 files in other folders)
