[project]
name = "agentforge-backend"
version = "0.1.0"
description = "AgentForge - Enterprise Agent Development Studio Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "anthropic>=0.40.0",
    "jinja2>=3.1.0",
    "black>=24.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.0",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.0.0",
    "boto3>=1.35.0",
]

[project.optional-dependencies]
generators = [
    "langgraph>=0.2.0",
    "google-adk>=1.0.0",
    "crewai>=0.80.0",
    "autogen-agentchat>=0.4.0",
    "strands-agents>=1.0.0",
    "claude-agent-sdk>=0.1.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
